# crypto-stat-arb

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
cryptoarb/: __init__.py  attribution.py  backtest.py  basket.py  config.py  data.py  kalman.py  metrics.py  pairs.py  paper_trader.py  portfolio.py  rediscovery.py  regime.py  risk.py  sensitivity.py  signals.py
examples/: real_data_backtest.py  rediscovery_example.py  synthetic_backtest.py  turnover_penalty_sweep.py
notebooks/: research.py
results/: backtest_results.json
tests/: test_attribution.py  test_backtest.py  test_basket.py  test_config.py  test_data.py  test_kalman.py  test_metrics.py  test_pairs.py  test_paper_trader.py  test_portfolio.py  test_rediscovery.py  test_regime.py  test_risk.py  test_sensitivity.py  test_signals.py
