[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-stat-arb"
version = "0.1.0"
description = "Statistical arbitrage engine for cryptocurrency markets"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Atharva Joshi", email = "atharvaj2112@gmail.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
keywords = [
    "statistical-arbitrage", "pairs-trading", "cointegration",
    "cryptocurrency", "quantitative-finance", "backtesting",
]

dependencies = [
    "ccxt>=4.0",
    "pandas>=2.0",
    "numpy>=1.24",
    "statsmodels>=0.14",
    "scipy>=1.10",
    "pydantic>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
reports = ["quantstats>=0.0.62"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/atharvajoshi01/crypto-stat-arb"
Repository = "https://github.com/atharvajoshi01/crypto-stat-arb"
Issues = "https://github.com/atharvajoshi01/crypto-stat-arb/issues"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
